--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -1,20 +1,42 @@
-@use "sass:map";
-@import "../helpers/_variables.scss";
-
 * {
-  font-style: map.get($typography_styles, "main_style");
-  font-weight: map.get($typography_styles, "main_weight");
-  font-size: map.get($typography_styles, "main_size");
-  line-height: map.get($typography_styles, "main_line-height");
-  color: map.get($typography_styles, "main_color");
-}
+  font-family: $ff-primary;
 
-// _header
+  @include typo_styles(
+                  $fw-semi-bold, //fw
+                  $fs-body, //fs
+                  $clr-primary, //clr
+                  $lh-body, //lh
+                  normal
+  );
+};
+
 .header_bloc {
   h1 {
-    font-style: map.get($header_title, "main_style");
-    font-weight: map.get($header_title, "main_weight");
-    font-size: map.get($header_title, "main_size");
-    line-height: map.get($header_title, "main_line-height");
-  }
-}
+    @include typo_styles(
+                    $fw-semi-bold,
+                    $fs-header,
+                    $clr-primary,
+                    $lh-header,
+                    bold
+    );
+
+    width: 33%;
+    height: fit-content;
+    margin: auto;
+  };
+};
+
+.menu_bloc {
+  h1 {
+    @include typo_styles(
+                    $fw-semi-bold,
+                    $fs-header,
+                    $clr-primary,
+                    $lh-header,
+                    bold
+    );
+
+    width: 33%;
+    height: fit-content;
+  };
+};
