--- a/src/assets/styles/helpers/_mixins.scss
+++ b/src/assets/styles/helpers/_mixins.scss
@@ -1,7 +1,21 @@
-@mixin content_box($width, $height, $padding, $direction) {
-    width: $width;
-    height: $height;
-    padding: $padding;
+@mixin content_box($w, $h, $p, $dir) {
+    width: $w; //width
+    height: $h; //height
+    padding: $p; //padding
     display: flex;
-    flex-direction: $direction;
-}
+    flex-direction: $dir; //direction
+};
+
+@mixin typo_styles($fw, $fs, $clr, $lh, $fstyle) {
+    font-weight: $fw;
+    font-size: toRem($fs);
+    color: $clr;
+    line-height: toRem($lh);
+    font-style: $fstyle;
+};
+
+@mixin hover_shadow($clr: $clr-primary) {
+    &:hover {
+        color: darken($clr, 30);
+    };
+};
