--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,29 +1,29 @@
 // helpers
-@import './helpers/_variables.scss';
-@import './helpers/_mixins.scss';
+@import 'helpers/variables';
+@import 'helpers/mixins';
+@import "helpers/functions";
 
 // base
-@import './base/_base.scss';
-@import './base/_reset.scss';
-@import './base/_typography.scss';
+@import 'base/base';
+@import 'base/reset';
+@import 'base/typography';
 
 // modules
-@import './modules/_buttons.scss';
-@import './modules/_carousel.scss';
-@import './modules/_slider.scss';
+@import 'modules/carousel';
+@import 'modules/slider';
 
 // layouts
-@import './layouts/_navigation.scss';
-@import './layouts/_grid.scss';
-@import './layouts/_header.scss';
-@import './layouts/_footer.scss';
-@import './layouts/_sidebar.scss';
-@import './layouts/_forms.scss';
+@import 'layouts/navigation';
+@import 'layouts/grid';
+@import 'layouts/header';
+@import 'layouts/footer';
+@import 'layouts/sidebar';
+@import 'layouts/forms';
 
 // pages
-@import './pages/_home.scss';
-@import './pages/_about.scss';
-@import './pages/_contact.scss';
+@import 'pages/home';
+@import 'pages/about';
+@import 'pages/contact';
 
 // themes
-@import './themes/_theme.scss';
+@import 'themes/theme';
