--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -1,16 +1,6 @@
-@use "sass:map";
-@import "../helpers/_variables.scss";
-@import "../helpers/_mixins.scss";
-
 .header_bloc {
-  @include content_box($width: 100%, $height: 260px, $padding: 30px, $direction: column);
+  @include content_box(100%, 260px, 30px, column);
 
   align-items: center;
 
-  h1 {
-    width: map.get($header_title, "main_width");
-    height: map.get($header_title, "main_height");
-
-    margin: auto;
-  }
-}
+};
