--- a/src/assets/styles/helpers/_mixins.scss
+++ b/src/assets/styles/helpers/_mixins.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints' as *;
+
 @mixin content_box($w, $h, $p, $dir) {
     width: $w; //width
     height: $h; //height
@@ -17,5 +19,12 @@
 @mixin hover_shadow($clr: $clr-primary) {
     &:hover {
         color: darken($clr, 30);
+    };
+};
+
+@mixin mq($key, $type) {
+    $size: map-get($breakpoints, $key);
+    @media only screen and ($type: $size) {
+        @content;
     };
 };
