--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import "helpers/functions";
+@import "helpers/breakpoints";
 
 // base
 @import 'base/base';
@@ -19,6 +20,7 @@
 @import 'layouts/footer';
 @import 'layouts/sidebar';
 @import 'layouts/forms';
+@import 'layouts/mid-banner';
 
 // pages
 @import 'pages/home';
