--- a/src/assets/styles/themes/_theme.scss
+++ b/src/assets/styles/themes/_theme.scss
@@ -4,9 +4,13 @@
     image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url($header-bg-url);
     size: cover;
     position: center;
-  }
-}
+  };
+};
 
 .menu_bloc {
   background: $menu-bg;
-}
+};
+
+.mid_banner {
+  background: $clr-mid-banner;
+};
