--- a/src/assets/styles/helpers/_variables.scss
+++ b/src/assets/styles/helpers/_variables.scss
@@ -9,10 +9,12 @@ $ff-primary: 'Montserrat', sans-serif !default;
 //font-size
 $fs-body: 25 !default;
 $fs-header: 30 !default;
+$fs-item: 21 !default;
 
 //line-height
 $lh-body: 23 !default;
 $lh-header: 24 !default;
+$lh-item: 24 !default;
 
 //font-weight
 $fw-light: 300;
@@ -46,13 +48,13 @@ $size-900: 5rem;
 
 
 // _header
-$header-bg-url: "/Users/nayanmallet/Documents/Dev/shopnextclothes_/src/assets/images/header_background.jpeg" !default;
+$header-bg-url: "@/assets/images/header_background.jpeg" !default;
 
 //_navigation
 $nav-btn-size: 40px !default;
 
 // _header
 $menu-bg: #4F4E4E !default;
-$h1-width: 33% !default;
+$h1-width: 185px !default;
 
 
