--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -21,6 +21,7 @@
 @import 'layouts/sidebar';
 @import 'layouts/forms';
 @import 'layouts/mid-banner';
+@import 'layouts/item-frame';
 
 // pages
 @import 'pages/home';
