--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -2,7 +2,7 @@
   @include content_box(100%, 260px, 30px, column);
   align-items: center;
 
-  @include mq(small, "max-width") {
-    $h1-width: toRem(92);
+  @include mq(small, "min-width") {
+    $h1-width: 33%;
   };
 };
