--- a/src/assets/styles/themes/_theme.scss
+++ b/src/assets/styles/themes/_theme.scss
@@ -1,4 +1,3 @@
-// _header
 .header_bloc {
   background: {
     image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url($header-bg-url);
@@ -14,3 +13,7 @@
 .mid_banner {
   background: $clr-mid-banner;
 };
+
+.item_frame {
+  background-size: cover !important;
+}
