--- a/src/assets/styles/themes/_theme.scss
+++ b/src/assets/styles/themes/_theme.scss
@@ -16,4 +16,19 @@
 
 .item_frame {
   background-size: cover !important;
-}
+};
+
+
+.search_tab {
+  background: rgb(79, 78, 78, 0.95);
+};
+
+.sc_header {
+
+  .sc_box {
+
+    .search_input {
+      background: none;
+    };
+  };
+};
