--- a/src/assets/styles/layouts/_grid.scss
+++ b/src/assets/styles/layouts/_grid.scss
@@ -1,45 +1,24 @@
-/*
-.items_scroll {
-    display: grid;
-    grid-gap: 15px;
-    align-content: start;
-}
+.scroll_grid {
+  width: 95%;
+  height: fit-content;
+  padding: 5%;
 
-.items_scroll > .scrolling {
-    grid-column: 2 / -2;
-}
+  display: grid ;
+  align-items: center ;
+  grid-auto-flow: column ;
+  grid-auto-rows: fit-content; // play with this to change height of the children, 50% will fill half
+  grid-template-columns: unset; // do not set template columns and rows
+  grid-template-rows: unset;
+  overflow: scroll;
 
-.scrolling {
-    display: grid;
-    grid-gap: 15px;
-    grid-template-columns: 10px;
-    grid-template-rows: minmax(150px, 1fr);
-    grid-auto-flow: column;
-    grid-auto-columns: calc(50% - var(--gutter) * 2);
+  background: gray;
 
-    overflow-x: scroll;
-    scroll-snap-type: x proximity;
-    margin: 15px 0;
-    padding: 0;
-
-    list-style: none;
-}
-
-.scrolling::-webkit-scrollbar {
-    display: none;
-}
-
-.scrolling:before, .scrolling:after {
+  &:before, &:after {
+    position: static;
     content: '';
-    width: 10px;
-}
+    width: 30px;
+  }
+  .item {
 
-.scrolling > .item, .item {
-    scroll-snap-align: center;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
- */
+  };
+};
