--- a/src/assets/styles/layouts/_item-frame.scss
+++ b/src/assets/styles/layouts/_item-frame.scss
@@ -13,12 +13,12 @@
 
       .size_box {
         @include content_box(fit-content, 22px, 0, row);
-        background: black;
+        margin-top: auto;
 
         svg {
-          width: 5px;
-          height: 9px;
-          padding-bottom: 2px;
+          width: 8px;
+          height:22px;
+          margin: 1px 0 0 4px;
         };
       };
     };
